# deepseek-coder-studio

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  llmstudio.py  llmstudio_cli.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  health.py  models.py  tasks.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  runtime.py  version.py
app/dataset/: __init__.py  formatter.py  loaders.py  pipeline.py  splitter.py  validator.py
app/evaluation/: __init__.py  benchmark.py  metrics.py  reporter.py
app/gui/: __init__.py  config.py  i18n.py  tasks.py  window.py
app/inference/: __init__.py  engine.py  prompts.py
app/models/: __init__.py  api.py  dataset.py  evaluation.py  task.py  training.py
app/services/: __init__.py  assistant.py  registry.py
app/training/: __init__.py  config.py  data.py  formatting.py  hub.py  lora.py  merge.py  trainer.py  validation.py
app/utils/: __init__.py  files.py  serialization.py
configs/: app.yaml
configs/evaluation/: default.yaml
configs/training/: lora.yaml  qlora.yaml
data/samples/: eval_prompts.json  sample_dataset.jsonl
docs/: api.md  architecture.md  release.md
scripts/: build_exe.ps1  bump_version.py
tests/: test_api.py  test_dataset_pipeline.py  test_gui_config.py  test_gui_window.py  test_training_hub.py  test_training_trainer.py  test_training_validation.py  test_version_sync.py
vscode-extension/: LICENSE  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/api/: client.ts
vscode-extension/src/commands/: codeActions.ts
vscode-extension/src/panels/: assistantPanel.ts
vscode-extension/src/types/: api.ts
vscode-extension/src/utils/: config.ts  editor.ts
